--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.7.2",
     "css-loader": "^7.1.2",
     "firebase": "^10.12.2",
+    "jwt-decode": "^4.0.0",
     "postcss-loader": "^8.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
