--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "css-loader": "^7.1.2",
+    "date-fns": "^3.6.0",
     "firebase": "^10.12.2",
     "jwt-decode": "^4.0.0",
     "postcss-loader": "^8.1.1",
