--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "postcss-loader": "^8.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
